volexc/tests/ui/check_undefined_type_union.out
Error: undefined type `UndefinedType`
   ╭─[check_undefined_type_union.vol:3:9]
   │
 3 │     Bar(UndefinedType) = 1
   │         ──────┬──────  
   │               ╰──────── not found
───╯