volexc/tests/ui/check_undefined_type_union.vol
// Undefined type reference in union
union Foo {
    Bar(UndefinedType) = 1
}
